<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">AndroidLabs</string>
  <string name="login">Login</string>
  <string name="enter_email">Enter your email address:</string>
  <string name="your_email">Your email:</string>
  <string name="enter_password">Type your password:</string>
  <string name="your_name">Your name:</string>
  <string name="enter_name">Enter your name</string>
  <string name="your_picture">Your picture:</string>
  <string name="take_picture">Click the button above to take a picture.</string>
  <string name="your_profile">Your profile</string>
  <string name="chat">Chat</string>
  <string name="send">Send</string>
  <string name="message">Message…</string>
  <string name="receive">Receive</string>
  <string name="delete">Do you want to delete this?</string>
  <string name="row">The selected row is: </string>
  <string name="database">The id in the database is: </string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
</resources>
