<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_profile"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        android:autofillHints="@string/enter_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_email"/>
    <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:hint="@string/enter_email"
      android:autofillHints="@string/enter_email"/>
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/your_picture"/>
    <Button
      android:id="@+id/chat"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/chat"/>
    <ImageButton
      android:id="@+id/picture"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:contentDescription="@string/your_picture"
      android:src="@android:drawable/picture_frame"/>
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/take_picture"/>
</LinearLayout>
